--- a/index.html
+++ b/index.html
@@ -1,2 +1,45 @@
-Hello World
-<img src="fashion.jpg"/>
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+      <li data-target="#myCarousel" data-slide-to="4"></li>  
+    </ol>
+  
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+      <div class="item active">
+        <img src="menu/cover0.jpg" alt="cover0">
+      </div>
+
+      <div class="item">
+        <img src="menu/ptitdej.jpg" alt="petit dejeune">
+      </div>
+
+      <div class="item">
+        <img src="menu/pizza.jpg" alt="No pizza">
+      </div>
+  
+      <div class="item">
+        <img src="menu/coffee.jpg" alt="coffee">
+      </div>
+  
+      <div class="item">
+        <img src="menu/cover1.jpg" alt="cover1">
+      </div>
+    </div>
+  
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
